force-app/main/default/objects/Community_Group_Control__c/Community_Group_Control__c.object-meta.xml
<CustomObject>
    <description>Represents the metadata associated with a Chatter Group that is created in the Community.  Is used to serve up the Group Manager feed separately from the Chatter Group Feed.</description>
    <label>Community Group Control</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Group Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>