force-app/main/default/objects/Community_Group_Control__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field defines whether the related group is Active in the Community and visible to users.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>