force-app/main/default/objects/Community_Group_Control__c/fields/Auto_Follow__c.field-meta.xml
<CustomField>
    <fullName>Auto_Follow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, Community Users who share the same Tags as Interests with the group will automatically follow the related group in chatter.</description>
    <label>Auto Follow</label>
    <type>Checkbox</type>
</CustomField>