force-app/main/default/objects/Community_Group_Control__c/fields/Automatic_Archive__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Archive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field defines whether automatic group archiving rules will apply to the related group.</description>
    <label>Automatic Archive</label>
    <type>Checkbox</type>
</CustomField>