force-app/main/default/objects/Community_Group_Control__c/fields/Chatter_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This defines the 18-digit SFID of the related Chatter Group for the Group Control record.</description>
    <label>Chatter Group ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>