force-app/main/default/objects/Community_Group_Control__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Defines a description for the Group Control which will also be related to the Chatter Group, if needed.</description>
    <inlineHelpText>Write a brief description of your group.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>