force-app/main/default/objects/Community_Group_Control__c/fields/Discoverable__c.field-meta.xml
<CustomField>
    <fullName>Discoverable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Discoverable = TRUE, the related Group will be visible in the Community for non-members to view</description>
    <inlineHelpText>If your group is discoverable, other users may find and view the group feed.  If your group is not discoverable, other users will not be able to find the group and members must be added by a group manager.</inlineHelpText>
    <label>Discoverable</label>
    <type>Checkbox</type>
</CustomField>