force-app/main/default/objects/Community_Group_Control__c/fields/Group_Control_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_Control_SF_ID__c</fullName>
    <description>Represents the 18 digit Salesforce unique ID of the Group Control record.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the 18 digit Salesforce unique ID of the Group Control record.</inlineHelpText>
    <label>Group Control SF ID</label>
    <type>Text</type>
</CustomField>