force-app/main/default/objects/Community_Group_Control__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>