force-app/main/default/objects/Community_Group_Control__c/fields/Manager_Group_Required__c.field-meta.xml
<CustomField>
    <fullName>Manager_Group_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field defines whether the Group has an administrative or management group for users to discuss group activities separately from the Group feed.</description>
    <label>Manager Group Required</label>
    <type>Checkbox</type>
</CustomField>