force-app/main/default/objects/Community_Group_Control__c/fields/Max_Users__c.field-meta.xml
<CustomField>
    <fullName>Max_Users__c</fullName>
    <description>Defines the maximum number of users expected to use this Group record, when Purpose = Project/Study Group.</description>
    <inlineHelpText>What is the maximum number of users that will participate in this group?</inlineHelpText>
    <label>Max # Users</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>