force-app/main/default/objects/Community_Group_Control__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <description>This field defines which Community the Chatter Group will be created in.  If there is only one Community, use &quot;Community.&quot; If there are multiple Communities, use the Community Names as values for this field.</description>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>