force-app/main/default/objects/Community_Group_Control__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>This field defines the purpose of the group that is being created for reporting purposes.</description>
    <inlineHelpText>What is the primary purpose for this group?</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Geographic</fullName>
            </value>
            <value>
                <fullName>Residence</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Project/Study Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>