force-app/main/default/objects/Community_Group_Control__c/fields/T_C_Accepted__c.field-meta.xml
<CustomField>
    <fullName>T_C_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</description>
    <inlineHelpText>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</inlineHelpText>
    <label>T&amp;C Accepted</label>
    <type>Checkbox</type>
</CustomField>