force-app/main/default/objects/Community_Group_Control__c/fields/T_C_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>T_C_Accepted_Date__c</fullName>
    <description>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</description>
    <inlineHelpText>Indicates the Date/Time when the Terms &amp; Conditions page was accepted by the User.</inlineHelpText>
    <label>T&amp;C Accepted Date</label>
    <type>DateTime</type>
</CustomField>