force-app/main/default/objects/Community_Group_Control__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the Group Terms &amp; Conditions record the User accepted.</description>
    <inlineHelpText>Represents the Group Terms &amp; Conditions record the User accepted.</inlineHelpText>
    <label>Terms</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Community_Admins__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group Terms</value>
        </filterItems>
        <infoMessage>You can only add a record that has a Record Type of Group Terms.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Community_Admins__c</referenceTo>
    <relationshipLabel>Community Group Controls</relationshipLabel>
    <relationshipName>Community_Group_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>