force-app/main/default/objects/Community_Group_Control__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Represents the Type of Group that will be created in the system.</description>
    <inlineHelpText>If your group will be public, any user may join.  If your group will be private, members must be added by a group manager.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>