force-app/main/default/objects/Community_Group_Control__c/validationRules/Public_group_should_be_discoverable.validationRule-meta.xml
<ValidationRule>
    <fullName>Public_group_should_be_discoverable</fullName>
    <active>true</active>
    <description>When a User selects a Group as Public, this Validation rule prevents the Group from being Undiscoverable.</description>
    <errorConditionFormula>Discoverable__c != true &amp;&amp; ISPICKVAL(Type__c, &#39;Public&#39;)</errorConditionFormula>
    <errorMessage>If the group is Public, it must be discoverable</errorMessage>
</ValidationRule>