force-app/main/default/objects/Community_Group_Control__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discoverable__c</columns>
    <columns>Type__c</columns>
    <columns>Purpose__c</columns>
    <columns>Chatter_Group_ID__c</columns>
    <columns>Network__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Group_Control_SF_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>