force-app/main/default/objects/Community_Group_Control__c/listViews/All_Groups.listView-meta.xml
<ListView>
    <fullName>All_Groups</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Discoverable__c</columns>
    <columns>Purpose__c</columns>
    <columns>Network__c</columns>
    <columns>Status__c</columns>
    <columns>Chatter_Group_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Groups</label>
    <language>en_US</language>
</ListView>